--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -144,7 +144,7 @@
                                 android:gravity="center">
 
                                 <com.google.android.material.imageview.ShapeableImageView
-                                    image="@{viewModel.currentUser.image.imageUri}"
+                                    imagesPath="@{viewModel.currentUser.image.imageUri}"
                                     android:layout_width="110dp"
                                     android:layout_height="110dp"
                                     android:background="@drawable/bg_edit_info"
