--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.aposs_buyer.viewmodel.CategoryViewModel" />
+            type="com.example.aposs_buyer.viewmodel.CategoriesViewModel" />
     </data>
     <LinearLayout
         android:orientation="vertical"
