--- a/app/src/main/res/layout/fragment_kind.xml
+++ b/app/src/main/res/layout/fragment_kind.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.ProductOfKindViewModel" />
@@ -25,204 +26,94 @@
             app:elevation="0dp"
             app:liftOnScroll="false">
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
+            <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:expandedTitleGravity="top"
-                app:layout_scrollFlags="noScroll">
+                android:background="@color/light_green"
+                app:layout_collapseMode="pin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/light_green"
-                    android:gravity="bottom"
-                    android:orientation="vertical">
+                    android:layout_marginHorizontal="20dp"
+                    android:orientation="horizontal"
+                    android:paddingVertical="20dp">
 
-                    <androidx.appcompat.widget.Toolbar
+                    <ImageView
+                        android:id="@+id/img_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:contentDescription="@string/image"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_back_white" />
+
+                    <TextView
+                        android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#00000000"
-                        app:layout_collapseMode="pin"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                        android:layout_centerInParent="true"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_toStartOf="@id/cartLayout"
+                        android:layout_toEndOf="@id/img_back"
+                        android:gravity="center"
+                        android:text="@{viewModel.selectedKindName}"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="20dp"
-                            android:gravity="center|top"
-                            android:orientation="vertical"
-                            android:paddingBottom="15dp">
+                    <androidx.coordinatorlayout.widget.CoordinatorLayout
+                        android:id="@+id/cartLayout"
+                        android:layout_width="33dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true">
 
+                        <ImageView
+                            android:id="@+id/img_cart"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            android:layout_gravity="bottom|left"
+                            android:contentDescription="@string/image"
+                            android:src="@drawable/ic_cart"
+                            app:tint="@color/white"
+                            tools:ignore="RtlHardcoded" />
 
-                            <RelativeLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:id="@+id/img_back"
-                                    android:layout_width="25dp"
-                                    android:layout_height="25dp"
-                                    android:layout_alignParentStart="true"
-                                    android:layout_marginTop="10dp"
-                                    android:src="@drawable/ic_back_white" />
-
-                                <TextView
-                                    android:id="@+id/title"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_alignParentTop="true"
-                                    android:layout_centerHorizontal="true"
-                                    android:layout_marginEnd="50dp"
-                                    android:text="@{viewModel.selectedKindName}"
-                                    android:textColor="@color/white"
-                                    android:textSize="30sp"
-                                    android:textStyle="bold" />
-
-                                <androidx.constraintlayout.widget.ConstraintLayout
-                                    android:layout_width="27dp"
-                                    android:layout_height="27dp"
-                                    android:layout_alignParentEnd="true"
-                                    android:layout_marginTop="5dp">
-
-                                    <ImageView
-                                        android:id="@+id/cart"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_alignParentEnd="true"
-                                        android:layout_centerVertical="true"
-                                        android:layout_marginEnd="20dp"
-                                        android:contentDescription="@string/image"
-                                        android:scaleType="centerCrop"
-                                        android:src="@drawable/ic_cart"
-                                        app:layout_constraintBottom_toBottomOf="parent"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:tint="@color/white" />
-
-                                    <androidx.cardview.widget.CardView
-                                        android:layout_width="14dp"
-                                        android:layout_height="14dp"
-                                        android:background="@color/red"
-                                        android:backgroundTint="@color/red"
-                                        app:cardCornerRadius="10dp"
-                                        app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent">
-
-                                        <TextView
-                                            android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:autoSizeMinTextSize="7sp"
-                                            android:gravity="center"
-                                            android:text="@string/defaultCartNumber"
-                                            android:textColor="@color/white"
-                                            android:textSize="10sp"
-                                            tools:ignore="SmallSp,SpUsage" />
-
-                                    </androidx.cardview.widget.CardView>
-
-                                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                                <com.google.android.material.textfield.TextInputLayout
-                                    android:id="@+id/search_bar"
-                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="38dp"
-                                    android:layout_below="@+id/title"
-                                    android:layout_marginTop="5dp"
-                                    app:boxStrokeColor="@color/disable_pray"
-                                    app:boxStrokeWidth="1dp"
-                                    app:boxStrokeWidthFocused="2dp"
-                                    app:hintAnimationEnabled="false"
-                                    app:hintEnabled="false"
-                                    app:startIconDrawable="@drawable/ic_search">
-
-                                    <com.google.android.material.textfield.TextInputEditText
-                                        android:layout_width="match_parent"
-                                        android:layout_height="38dp"
-                                        android:background="@drawable/bg_search"
-                                        android:editable="false"
-                                        android:padding="0dp"
-                                        android:text="@string/search"
-                                        android:textColor="@color/disable_pray" />
-                                </com.google.android.material.textfield.TextInputLayout>
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_below="@+id/search_bar"
-                                    android:layout_alignParentStart="true"
-                                    android:layout_marginTop="10dp"
-                                    android:layout_marginEnd="10dp">
-
-                                    <ImageView
-                                        android:layout_width="25dp"
-                                        android:layout_height="25dp"
-                                        android:layout_marginEnd="10dp"
-                                        android:src="@drawable/ic_filter" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginEnd="10dp"
-                                        android:text="Sort by:"
-                                        android:textColor="@color/white"
-                                        android:textSize="14dp"
-                                        android:textStyle="bold" />
-
-                                    <androidx.appcompat.widget.AppCompatButton
-                                        android:layout_width="46dp"
-                                        android:layout_height="25dp"
-                                        android:layout_marginEnd="8dp"
-                                        android:background="@drawable/bg_btn_filter"
-                                        android:text="Rating"
-                                        android:textAllCaps="false"
-                                        android:textColor="@color/white"
-                                        android:textSize="13dp" />
-
-                                    <androidx.appcompat.widget.AppCompatButton
-                                        android:layout_width="69dp"
-                                        android:layout_height="25dp"
-                                        android:layout_marginEnd="8dp"
-                                        android:background="@drawable/bg_btn_filter"
-                                        android:text="Purchased"
-                                        android:textAllCaps="false"
-                                        android:textColor="@color/white"
-                                        android:textSize="13dp" />
-
-                                    <androidx.appcompat.widget.AppCompatButton
-                                        android:layout_width="55dp"
-                                        android:layout_height="25dp"
-                                        android:background="@drawable/bg_btn_filter"
-                                        android:text="Product"
-                                        android:textAllCaps="false"
-                                        android:textColor="@color/white"
-                                        android:textSize="13dp" />
-                                </LinearLayout>
-                            </RelativeLayout>
-                        </LinearLayout>
-                    </androidx.appcompat.widget.Toolbar>
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="145dp">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rc_products"
-                        listProduct="@{viewModel.productKind}"
-                        app:spanCount="2"
-                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        tools:listitem="@layout/item_product" />
-                </LinearLayout>
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+                        <TextView
+                            android:layout_width="14dp"
+                            android:layout_height="14dp"
+                            android:layout_gravity="end|top"
+                            android:background="@drawable/bg_quantity_in_cart"
+                            android:text="@string/defaultCartNumber"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="10sp"
+                            tools:ignore="RtlCompat,SmallSp" />
+                    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                </RelativeLayout>
+            </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="5dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rc_products"
+                listProduct="@{viewModel.productKind}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="2"
+                tools:listitem="@layout/item_product" />
+        </LinearLayout>
     </LinearLayout>
 </layout>
