--- a/app/src/main/res/layout/fragment_product_detail_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_product_detail_dialog_list_dialog.xml
@@ -35,7 +35,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    image="@{viewModel.selectedProductImages.imageUri}"
+                    imagesPath="@{viewModel.selectedProductImages.imageUri}"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_marginHorizontal="10dp"
