--- a/app/src/main/res/layout/item_check_out.xml
+++ b/app/src/main/res/layout/item_check_out.xml
@@ -14,7 +14,7 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_gravity="center"
-        image="@{cartItem.image.imageUri}"/>
+        imagesPath="@{cartItem.image.imageUri}"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
