--- a/app/src/main/res/layout/item_detail_product_image_view_pager.xml
+++ b/app/src/main/res/layout/item_detail_product_image_view_pager.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            image="@{image.imageUri}"
+            imagesPath="@{image.imageUri}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/image"
