--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -56,7 +56,7 @@
                     app:layout_constraintTop_toTopOf="parent">
                     <ImageView
                         android:id="@+id/image"
-                        image="@{favoriteProduct.image.imageUri}"
+                        imagesPath="@{favoriteProduct.image.imageUri}"
                         android:layout_width="match_parent"
                         android:layout_height="130dp"
                         android:contentDescription="@string/image"
