--- a/app/src/main/res/layout/item_need_rating.xml
+++ b/app/src/main/res/layout/item_need_rating.xml
@@ -30,7 +30,7 @@
 
                 <ImageView
                     android:scaleType="centerCrop"
-                    image="@{rateNowItem.image.imageUri}"
+                    imagesPath="@{rateNowItem.image.imageUri}"
                     android:layout_width="63dp"
                     android:layout_height="63dp"
                     android:layout_gravity="center" />
