--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -45,7 +45,7 @@
                     app:layout_constraintTop_toTopOf="parent">
                     <ImageView
                         android:id="@+id/image"
-                        image="@{product.image.imageUri}"
+                        imagesPath="@{product.image.imageUri}"
                         android:layout_width="match_parent"
                         android:layout_height="130dp"
                         android:contentDescription="@string/image"
