--- a/app/src/main/res/layout/item_rating.xml
+++ b/app/src/main/res/layout/item_rating.xml
@@ -26,7 +26,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                image="@{rating.avatar.imageUri}"
+                imagesPath="@{rating.avatar.imageUri}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
