--- a/app/src/main/res/layout/item_view_pager_detail_category.xml
+++ b/app/src/main/res/layout/item_view_pager_detail_category.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:contentDescription="@string/image"
         android:scaleType="centerCrop"
-        image="@{image.imageUri}"
+        imagesPath="@{image.imageUri}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
